<resources>
    <string name="app_name">图书馆在线系统</string>

    <!--登录-->
    <string name="login">登录</string>
    <string name="account_number">账号</string>
    <string name="password">密码</string>
    <string name="register">注册帐号</string>
    <string name="reader">读者端</string>
    <string name="manager">管理员端</string>

    <!--主页-->
    <string name="search">检索</string>
    <string name="manage">管理</string>
    <string name="mine">我的</string>
    <string name="hint_search">搜索图书名称、作者、出版社</string>
    <string name="book_author">作者：</string>
    <string name="book_location">位置：</string>
    <string name="book_intro">简介：</string>
    <string name="book_publishing_house">出版社：</string>
    <string name="book_isbn">ISBN：</string>
    <string name="hot_key">热门搜索</string>
    <string name="cancel">取消</string>
    <string name="book_detail">书籍详情</string>
    <string name="edit">编辑</string>
    <string name="my_borrow_record">我的借阅记录</string>
    <string name="major">专业</string>
    <string name="userName">用户名</string>
    <string name="sex">性别</string>
    <string name="new_password">新密码</string>
    <string name="reader_manage">读者管理</string>
    <string name="borrow_and_return">借阅与还书</string>
    <string name="book_manage">书籍管理</string>
    <string name="book_id">书本ID：</string>
    <string name="delete">删除</string>
    <string name="update">修改</string>
    <string name="borrow">借阅</string>
    <string name="user_id">用户ID</string>
    <string name="confirm">确认</string>
    <string name="borrow_manage">借阅管理</string>
    <string name="add_book">添加图书</string>
    <string name="book_name">书名</string>

</resources>
