<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <include
        android:id="@+id/include2"
        layout="@layout/layout_top" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_reader_fragment_manage"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_btn_pink"
                android:text="@string/reader_manage"
                android:textColor="@color/white"
                />


            <Button
                android:id="@+id/btn_borrow_fragment_manage"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_btn_green"
                android:text="@string/borrow_manage"
                android:textColor="@color/white"
                />


            <Button
                android:id="@+id/btn_book_fragment_manage"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_btn_yellow"
                android:text="@string/book_manage"
                android:textColor="@color/white"
                />






        </LinearLayout>


    </ScrollView>




</android.support.constraint.ConstraintLayout>
