<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:layout_margin="5dp"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
      >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:text="@string/borrow"
            android:textColor="@color/white"
            android:textSize="@dimen/bigger_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/tv_title_dialog_borrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_reader_id_dialog_borrow"
            android:layout_width="0dp"
            android:layout_height="@dimen/textInputLayoutHeight"
            android:layout_marginStart="@dimen/editTextMargin"
            android:layout_marginEnd="@dimen/editTextMargin"
            android:gravity="bottom"
            android:theme="@style/dialog_TextInputLayoutTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_dialog_borrow">

            <EditText
                android:id="@+id/et_reader_id_dialog_borrow"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editTextHeight"
                android:background="@drawable/bg_account_input"
                android:gravity="center_vertical|start"
                android:hint="@string/user_id"
                android:inputType="text"
                android:paddingStart="@dimen/editTextPadding"
                android:paddingEnd="@dimen/editTextPadding"
                android:singleLine="true"
                android:maxLength="10"
                android:textColor="@color/black"
                android:textSize="@dimen/bigTextSize" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_book_id_dialog_borrow"
            android:layout_width="0dp"
            android:layout_marginTop="8dp"
            android:layout_height="@dimen/textInputLayoutHeight"
            android:layout_marginStart="@dimen/editTextMargin"
            android:layout_marginEnd="@dimen/editTextMargin"
            android:gravity="bottom"
            android:theme="@style/dialog_TextInputLayoutTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_reader_id_dialog_borrow">

            <EditText
                android:id="@+id/et_book_id_dialog_borrow"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editTextHeight"
                android:background="@drawable/bg_account_input"
                android:gravity="center_vertical|start"
                android:hint="@string/book_id"
                android:inputType="text"
                android:maxLength="10"
                android:paddingStart="@dimen/editTextPadding"
                android:paddingEnd="@dimen/editTextPadding"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/bigTextSize" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_ok_dialog_borrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_btn_pink"
            android:text="@string/confirm"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/til_book_id_dialog_borrow"
            app:layout_constraintTop_toBottomOf="@+id/til_book_id_dialog_borrow" />

        <Button
            android:id="@+id/btn_cancel_dialog_borrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_btn_pink"
            android:text="@string/cancel"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/btn_ok_dialog_borrow"
            app:layout_constraintEnd_toStartOf="@+id/btn_ok_dialog_borrow"
            app:layout_constraintTop_toTopOf="@+id/btn_ok_dialog_borrow" />



    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
