<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:layout_margin="5dp"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tv_title_dialog_add_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:text="@string/add_book"
            android:textColor="@color/white"
            android:textSize="@dimen/bigger_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/sv_dialog_add_book"
            android:layout_width="0dp"
            android:layout_marginTop="8dp"
            android:layout_height="350dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_dialog_add_book">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/iv_cover_dialog_add_book"
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:scaleType="center"
                    android:clickable="true"
                    android:src="@drawable/book_image_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_dialog_borrow"
                    android:focusable="true" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_book_name_dialog_add_book"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textInputLayoutHeight"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:gravity="bottom"
                    android:theme="@style/dialog_TextInputLayoutTheme"
                   >

                    <EditText
                        android:id="@+id/et_book_name_dialog_add_book"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/editTextHeight"
                        android:background="@drawable/bg_account_input"
                        android:gravity="center_vertical|start"
                        android:hint="@string/book_name"
                        android:inputType="text"
                        android:maxLength="25"
                        android:paddingStart="@dimen/editTextPadding"
                        android:paddingEnd="@dimen/editTextPadding"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/bigTextSize" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_author_dialog_add_book"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textInputLayoutHeight"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:gravity="bottom"
                    android:theme="@style/dialog_TextInputLayoutTheme">

                    <EditText
                        android:id="@+id/et_book_author_dialog_add_book"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/editTextHeight"
                        android:background="@drawable/bg_account_input"
                        android:gravity="center_vertical|start"
                        android:hint="@string/book_author"
                        android:inputType="text"
                        android:maxLength="50"
                        android:paddingStart="@dimen/editTextPadding"
                        android:paddingEnd="@dimen/editTextPadding"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/bigTextSize" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_book_isbn_dialog_add_book"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textInputLayoutHeight"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginTop="8dp"
                    android:gravity="bottom"
                    android:theme="@style/dialog_TextInputLayoutTheme">

                    <EditText
                        android:id="@+id/et_book_isbn_dialog_add_book"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/editTextHeight"
                        android:background="@drawable/bg_account_input"
                        android:gravity="center_vertical|start"
                        android:hint="@string/book_isbn"
                        android:inputType="text"
                        android:digits="0123456789"
                        android:maxLength="15"
                        android:paddingStart="@dimen/editTextPadding"
                        android:paddingEnd="@dimen/editTextPadding"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/bigTextSize" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_location_dialog_add_book"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textInputLayoutHeight"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginTop="8dp"
                    android:gravity="bottom"
                    android:theme="@style/dialog_TextInputLayoutTheme">

                    <EditText
                        android:id="@+id/et_location_dialog_add_book"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/editTextHeight"
                        android:background="@drawable/bg_account_input"
                        android:gravity="center_vertical|start"
                        android:hint="@string/book_location"
                        android:inputType="text"
                        android:maxLength="10"
                        android:paddingStart="@dimen/editTextPadding"
                        android:paddingEnd="@dimen/editTextPadding"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/bigTextSize" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_publishingHouse_dialog_add_book"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textInputLayoutHeight"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginTop="8dp"
                    android:gravity="bottom"
                    android:theme="@style/dialog_TextInputLayoutTheme">

                    <EditText
                        android:id="@+id/et_publishingHouse_dialog_add_book"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/editTextHeight"
                        android:background="@drawable/bg_account_input"
                        android:gravity="center_vertical|start"
                        android:hint="@string/book_publishing_house"
                        android:inputType="text"
                        android:maxLength="20"
                        android:paddingStart="@dimen/editTextPadding"
                        android:paddingEnd="@dimen/editTextPadding"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/bigTextSize" />

                </android.support.design.widget.TextInputLayout>



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_intro_dialog_add_book"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textInputLayoutHeight"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="bottom"
                    android:theme="@style/dialog_TextInputLayoutTheme">

                    <EditText
                        android:id="@+id/et_intro_dialog_add_book"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/editTextHeight"
                        android:background="@drawable/bg_account_input"
                        android:gravity="center_vertical|start"
                        android:hint="@string/book_intro"
                        android:inputType="text"
                        android:maxLength="600"
                        android:paddingStart="@dimen/editTextPadding"
                        android:paddingEnd="@dimen/editTextPadding"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/bigTextSize" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>


        </ScrollView>


        <Button
            android:id="@+id/btn_ok_dialog_add_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_btn_pink"
            android:text="@string/confirm"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sv_dialog_add_book" />

        <Button
            android:id="@+id/btn_cancel_dialog_add_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_btn_pink"
            android:text="@string/cancel"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/btn_ok_dialog_add_book"
            app:layout_constraintEnd_toStartOf="@+id/btn_ok_dialog_add_book"
            app:layout_constraintTop_toTopOf="@+id/btn_ok_dialog_add_book" />



    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
